--- a/flix/flix.csproj
+++ b/flix/flix.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\PerfilController.cs" />
     <Compile Include="Controllers\ReviewController.cs" />
+    <Compile Include="Controllers\UserLController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -243,6 +244,7 @@
     <Compile Include="Models\Review.cs" />
     <Compile Include="Models\ReviewDBHelper.cs" />
     <Compile Include="Models\ReviewList.cs" />
+    <Compile Include="Models\UserL.cs" />
     <Compile Include="Models\UserViewMovel.cs" />
     <Compile Include="Models\SearchBar.cs" />
     <Compile Include="Models\Trailer.cs" />
@@ -576,6 +578,7 @@
     <Content Include="Views\Login\Login.cshtml" />
     <Content Include="Views\Login\logout.cshtml" />
     <Content Include="Views\Login\Register.cshtml" />
+    <Content Include="Views\UserL\UserL.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
