--- a/flix/flix.csproj
+++ b/flix/flix.csproj
@@ -576,13 +576,13 @@
     <Content Include="Views\Login\Login.cshtml" />
     <Content Include="Views\Login\logout.cshtml" />
     <Content Include="Views\Login\Register.cshtml" />
+    <Content Include="Views\Admin\Admin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\Api\" />
     <Folder Include="Resources\Libraries\NewFolder1\" />
     <Folder Include="Resources\Library\" />
-    <Folder Include="Views\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
