--- a/flix/Web.config
+++ b/flix/Web.config
@@ -9,9 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DBConnection" connectionString="Server=DESKTOP-BRLL0NI;database=GoodMovie;integrated security=yes" providerName="System.Data.SqlClient" />
-    <!--<add name="DBConnection" connectionString="Server=BERENICE\ISAAC;database=GoodMovie;integrated security=yes" providerName="System.Data.SqlClient" />-->
-    <add name="GoodMovie" connectionString="metadata=res://*/Login.csdl|res://*/Login.ssdl|res://*/Login.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BRLL0NI;initial catalog=GoodMovie;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DBConnection" connectionString="Server=DESKTOP-BRLL0NI;database=GoodMovie;integrated security=yes" providerName="System.Data.SqlClient" />-->
+    <add name="DBConnection" connectionString="Server=BERENICE\ISAAC;database=GoodMovie;integrated security=yes" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
